fix shared notes
